8. Diseño del slideshow 11/10/2017

--- a/Creacion_Temas/8. Diseño del slideshow/wp_theme/index.html
+++ b/Creacion_Temas/8. Diseño del slideshow/wp_theme/index.html
@@ -39,7 +39,7 @@
                     <article>
                         <hgroup><h2><a href="#">Titulo de nuestro articulo</a></h2>
                         <p class="date">26 de diciembre de 2014 en <a href="#">Categoria 1</a></p>
-                        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab distinctio culpa veritatis architecto totam, dolorum impedit voluptatum asperiores consectetur porro neque quis in ratione corrupti debitis! Nostrum dignissimos, esse perferendis.</p>
+                        <p class="extract">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab distinctio culpa veritatis architecto totam, dolorum impedit voluptatum asperiores consectetur porro neque quis in ratione corrupti debitis! Nostrum dignissimos, esse perferendis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat nemo ratione dolorem modi? Voluptates, similique, neque. Molestias veritatis, excepturi repellat facilis iste! Cum ipsa, facere amet tempore doloribus itaque nemo!</p>
                         </hgroup> <!-- Para ni tener problemas de CEO-->
                     </article>
                 </div>
