--- a/Creacion_Temas/9. Diseño del contenido principal/wp_theme/index.html
+++ b/Creacion_Temas/9. Diseño del contenido principal/wp_theme/index.html
@@ -87,6 +87,12 @@
                 <p class="date">26 de diciembre de 2014 en <a href="#">Categoria 1</a></p>
                         <p class="extract">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab distinctio culpa veritatis architecto totam, dolorum impedit voluptatum asperiores consectetur porro neque quis in ratione corrupti debitis! Nostrum dignissimos, esse perferendis.</p>
             </article>
+            <div id="pagination">
+                <p>
+                <a href="#"><- Post Siguientes</a>
+                <a href="#">Post Anteriores-></a>
+                </p>
+            </div>
         </section>
         <aside>
             <section class="widget">
