--- a/Creacion_Temas/10. Diseño del slider y footer/wp_theme/index.html
+++ b/Creacion_Temas/10. Diseño del slider y footer/wp_theme/index.html
@@ -149,6 +149,16 @@
                     <li><a href="#">Lorem Ipsum</a></li>
                 </ul>
             </section>
+            <section class="widget">
+                <h3>Widget</h3>
+                <ul>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                </ul>
+            </section>
         </section>
         <p id="copyright">My BLog Copyright @ 2014</p>
     </footer>
