--- a/Creacion_Temas/12. Categorias y articulos/wp_theme/index.html
+++ b/Creacion_Temas/12. Categorias y articulos/wp_theme/index.html
@@ -25,6 +25,7 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#">Acerca de</a></li>
                 <li><a href="#">Contacto</a></li>
                 <li><a href="#">Pagina Ejemplo</a></li>
